# AIClass

./: README.md  cifar.ipynb  iris.ipynb  main.py  mnist.ipynb  personality-predictor.ipynb  personality-predictor.py  pyproject.toml  requirements.txt
models/: feature_engineering.py  personality_scaler.pkl
